Add files and structure for UI

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
 </head>
 <body>
 
+  <div class="container">
+    <div id="rock" class="choice">
+      Rock
+    </div>
+    <div id="paper" class="choice">
+      Paper
+    </div>
+    <div id="scissors" class="choice">
+      Scissors
+    </div>
+  </div> <!-- end container -->
+
   <script src="js/main.js"></script>
 </body>
 </html>
