--- a/index.html
+++ b/index.html
@@ -2,18 +2,29 @@
 <html>
 <head>
   <title></title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
   <div class="container">
-    <div id="rock" class="choice">
-      Rock
-    </div>
-    <div id="paper" class="choice">
-      Paper
-    </div>
-    <div id="scissors" class="choice">
-      Scissors
+
+    <h1>Please Choose:</h1>
+
+    <div class="row">
+      <button id="rock" class="choice col-md-3">
+        Rock
+      </button>
+      <button id="paper" class="choice col-md-3">
+        Paper
+      </button>
+      <button id="scissors" class="choice col-md-3">
+        Scissors
+      </button>
+    </div> <!-- end row -->
+
+    <div class="row" id="results">
+
     </div>
   </div> <!-- end container -->
 
