Game keeps track of and displays scores

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
       </button>
     </div> <!-- end row -->
 
-    <div class="row" id="results">
-
+    <div class="row">
+      <div id="results"></div>
+      <div class="col-md-6">Player Score: <span id="player-score">0</span></div>
+      <div class="col-md-6">Computer Score: <span id="computer-score">0</span></div>
     </div>
   </div> <!-- end container -->
 
