Add links to play other game

--- a/advrps.html
+++ b/advrps.html
@@ -8,8 +8,11 @@
 <body>
 
   <div class="container">
+    <div class="row">
+      <h1 class="col-md-6">Please Choose:</h1>
 
-    <h1>Please Choose:</h1>
+      <a class="col-md-6" href="index.html">Please Click Here for the Original Game</a>
+    </div>
 
     <div class="row">
       <button id="rock" class="choice col-md-2">
