--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 
   <div class="container">
 
-    <h1>Please Choose:</h1>
+    <div class="row">
+      <h1 class="col-md-6">Please Choose:</h1>
+
+      <a class="col-md-6" href="advrps.html">Please Click Here to Play <em>Rock, Paper, Scissors, Lizard, Spock</em></a>
+    </div>
 
     <div class="row">
       <button id="rock" class="choice col-md-3">
